--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.544.0",
     "mobx": "^6.15.0",
     "next": "15.5.4",
+    "next-pwa": "^5.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-number-format": "^5.4.4",
