--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,18 @@
 {
-  "name": "My Next App",
-  "short_name": "NextApp",
+  "name": "Bunyod Optom",
+  "short_name": "BunyodOptom",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/logo1.svg",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/logo1.svg",
       "sizes": "512x512",
       "type": "image/png"
     }
