--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.12.2",
     "lucide-react": "^0.544.0",
     "mobx": "^6.15.0",
+    "mobx-react-lite": "^4.1.1",
     "next": "15.5.4",
     "next-pwa": "^5.6.0",
     "react": "19.1.0",
