--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/logo1.svg",
+      "src": "/favicon.svg",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/logo1.svg",
+      "src": "/favicon.svg",
       "sizes": "512x512",
       "type": "image/png"
     }
