--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "lucide-react": "^0.544.0",
     "mobx": "^6.15.0",
     "mobx-react-lite": "^4.1.1",
-    "next": "15.5.4",
+    "next": "^16.1.1",
     "next-pwa": "^5.6.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-number-format": "^5.4.4",
     "swiper": "^12.0.2"
   },
