--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-pwa": "^5.6.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-hook-form": "^7.70.0",
     "react-number-format": "^5.4.4",
     "swiper": "^12.0.2"
   },
